# Advent_of_code

./: Cargo.toml  flake.nix
2018/: 07.rs
2023/: 09.rs  15.rs
2024/: 01.rs  02.rs  03.rs
crates/advent/: build.rs
crates/advent/src/: lib.rs
