[workspace]
members = ["crates/*"]

[workspace.lints.rust]
elided-lifetimes-in-paths = "warn"
unsafe-op-in-unsafe-fn = "warn"

[workspace.lints.clippy]
many_single_char_names = "allow"
unwrap_or_default = "allow"

[workspace.dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
argh = "0.1.12"
curl = "0.4.44"
either = "1.9.0"
itermore = { version = "0.7.1", features = ["full"] }
itertools = "0.12.0"
open = "5.0.1"
rand = "0.8.5"
regex-macro = "0.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
time = "0.3.30"
toml = "0.8.8"
vectrix = "0.3.0"
yansi = "1.0.0-rc.1"

[package]
name = "advent-bins"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
thiserror = { workspace = true }
vectrix = { workspace = true }
advent = { path = "crates/advent", features = ["festive", "prelude"] }
nom = "7.1.3"

[features]
json = ["advent/json"]

[lints]
workspace = true

[[bin]]
name = "202401"
path = "2024/01.rs"

[[bin]]
name = "202402"
path = "2024/02.rs"

[[bin]]
name = "202403"
path = "2024/03.rs"
